--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculadora de Costo Promedio en Dolares para Cripto Inversiones (ProDCI)</title>
 
+    <!-- Incluyendo el CSS para los adornos de la pagina-->
+    <link rel="stylesheet" href="styles/styles.css">
+
     <!-- Incluyendo bootstrap a la pagina -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
 
 </head>
 <body>
@@ -19,47 +21,57 @@
         integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
     </script>
 
-    <header>
-        <!--Aqui va la cabecera, todavia no esta definido-->
-    </header>
 
     <main>
         <!--Aqui va el contenido de la pagina-->
-        <H1>Calculadora de Costo Promedio en Dolares para Cripto Inversiones</H1>
-        <h2>DCI</h2>
+
+        <!-- Adorno superior-->
+        <div class="custom-shape-divider-top-1619146203">
+          <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+              <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+              <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+              <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+          </svg>
+      </div>
+        
 
         <!--Contenedor para los elementos de la pagina-->
         <div class="container">
-            <div class="row"> <!--Fila 1-->
+          <div class="row p-5"> <!--Fila 0-->
+
+            <H1>Calculadora de Costo Promedio en Dolares para Cripto Inversiones</H1>
+          </div>
+
+          <div class="row"> <!--Fila 1-->
                 <div class="col-sm">
 
                     <!--1. Fecha Inicio de Inversion-->
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Fecha Inicio (DD/MM/YY)</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Fecha Inicio (MM/DD/YY)</span>
+                        <input type="text" id="formFechaInicio" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
                     <!--2. Fecha Fin de Inversion-->
                     <div class="input-group mb-3">
-                        <span class="input-group-text" id="inputGroup-sizing-default">Fecha Fin (DD/MM/YY)</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <span class="input-group-text" id="inputGroup-sizing-default">Fecha Fin (MM/DD/YY)</span>
+                        <input type="text" id="formFechaFin" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
                     <!--3. Monto periodico en dolares-->
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Monto en Dolares</span>
-                        <input type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <input type="text" id="formMontoUSD" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
-                    <!--4. Periodo de tiempo (Semanal, Bi Semanal, Semi Mensual, Mensual, Lump Sum)-->
+                    <!--4. Periodo de tiempo (Semanal, Bi Semanal, Mensual, Lump Sum)-->
                     <div class="input-group mb-3">
                         <label class="input-group-text" for="inputGroupSelect01">Periodo</label>
-                        <select class="form-select" id="inputGroupSelect01">
+                        <select id="formPeriodo" class="form-select" id="inputGroupSelect01">
                           <option selected>Seleccione un periodo de tiempo...</option>
-                          <option value="1">Semanal (dia 1 de la semana)</option>
-                          <option value="2">Bi Semanal (dia 1 cada 2 semanas)</option>
-                          <option value="3">Mensual (1 de mes)</option>
-                          <option value="4">Lump Sum (1 vez en fecha inicio)</option>
+                          <option value="Semanal">Semanal (dia 1 de la semana)</option>
+                          <option value="Bi-Semanal">Bi Semanal (dia 1 cada 2 semanas)</option>
+                          <option value="Mensual">Mensual (1 de mes)</option>
+                          <option value="Lump Sum">Lump Sum (1 vez en fecha inicio)</option>
                         </select>
                     </div>
 
@@ -67,34 +79,80 @@
                     <!--5. Criptomoneda (Opciones BTC, ETH, ADA)-->
                     <div class="input-group mb-3">
                         <label class="input-group-text" for="inputGroupSelect01">Criptomoneda</label>
-                        <select class="form-select" id="inputGroupSelect01">
+                        <select id="formCripto" class="form-select" id="inputGroupSelect01">
                           <option selected>Seleccione una opcion...</option>
-                          <option value="1">Bitcoin</option>
-                          <option value="2">Ethereum</option>
-                          <option value="3">Cardano</option>
+                          <option value="BTC">Bitcoin</option>
+                          <option value="ETH">Ethereum</option>
+                          <option value="ADA">Cardano</option>
                         </select>
                     </div>
 
                 </div>
             </div>
-            <div class="row"> <!--Fila 2-->
-              <div class="col-sm">
-                Aqui se mostrara el ROI
+
+            <div class="row p-2"> <!--Fila 2-->
+              <div class="col-sm p-1">
+                <div class="d-grid gap-2 col-6 mx-auto">
+                  <button type="button" id="formCalcularInversion" class="btn btn-primary btn-lg">Calcular Inversion</button>
+                </div>
               </div>
-              <div class="col-sm">
-                Aqui se mostrara el valor total DCA
-              </div>
-              <div class="col-sm">
-                Aqui se mostrara cuanto Cripto se adquirio en ese periodo de tiempo
-              </div>
-              <div class="col-sm">
-                Aqui se mostrara cuanto USD se gasto
+              <div class="col-sm p-1">
+                <div class="d-grid gap-2 col-6 mx-auto">
+                  <button type="button" id="formReiniciarFormulario" class="btn btn-secondary btn-lg">Reiniciar Formulario</button>
+                </div>
               </div>
             </div>
+
+            <div class="row p-4"> <!--Fila 3-->
+              <div class="col-sm">
+                 <div class="alert alert-info" role="alert">
+                    <h4 class="alert-heading">ROI!</h4>
+                    <p>Retorno de inversion estimado</p>
+                    <hr>
+                    <p class="mb-0" id="formOutputROI"></p>
+                  </div>
+                </div>
+                
+              <div class="col-sm">
+                <div class="alert alert-success" role="alert">
+                  <h4 class="alert-heading">DCA!</h4>
+                  <p>Dolares que tendrias en fecha fin</p>
+                  <hr>
+                  <p class="mb-0" id="formOutputDCA"></p>
+                </div>
+              </div>
+
+              <div class="col-sm">
+                <div class="alert alert-warning" role="alert">
+                  <h4 class="alert-heading">CRIPTO!</h4>
+                  <p>Cantidad de Cripto acumulada</p>
+                  <hr>
+                  <p class="mb-0" id="formOutputCripto"></p>
+                </div>
+
+              </div>
+              <div class="col-sm">
+                <div class="alert alert-danger" role="alert">
+                  <h4 class="alert-heading">USD!</h4>
+                  <p>Cantidad de dolares USD invertidos</p>
+                  <hr>
+                  <p class="mb-0" id="formOutputUSD"></p>
+                </div>
+
+              </div>
+            </div>
+
           </div>
+
     </main>
 
-
+    <div class="custom-shape-divider-bottom-1619146220">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M0,0V46.29c47.79,22.2,103.59,32.17,158,28,70.36-5.37,136.33-33.31,206.8-37.5C438.64,32.43,512.34,53.67,583,72.05c69.27,18,138.3,24.88,209.4,13.08,36.15-6,69.85-17.84,104.45-29.34C989.49,25,1113-14.29,1200,52.47V0Z" opacity=".25" class="shape-fill"></path>
+          <path d="M0,0V15.81C13,36.92,27.64,56.86,47.69,72.05,99.41,111.27,165,111,224.58,91.58c31.15-10.15,60.09-26.07,89.67-39.8,40.92-19,84.73-46,130.83-49.67,36.26-2.85,70.9,9.42,98.6,31.56,31.77,25.39,62.32,62,103.63,73,40.44,10.79,81.35-6.69,119.13-24.28s75.16-39,116.92-43.05c59.73-5.85,113.28,22.88,168.9,38.84,30.2,8.66,59,6.17,87.09-7.5,22.43-10.89,48-26.93,60.65-49.24V0Z" opacity=".5" class="shape-fill"></path>
+          <path d="M0,0V5.63C149.93,59,314.09,71.32,475.83,42.57c43-7.64,84.23-20.12,127.61-26.46,59-8.63,112.48,12.24,165.56,35.4C827.93,77.22,886,95.24,951.2,90c86.53-7,172.46-45.71,248.8-84.81V0Z" class="shape-fill"></path>
+      </svg>
+  </div>
     <script src="js/main.js"></script>
 </body>
 </html>
