ultimos ajustes a botones para entrega 4

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                     <!--1. Fecha Inicio de Inversion-->
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Fecha Inicio (MM/DD/YY)</span>
-                        <input type="text" id="formFechaInicio" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <input type="date" id="formFechaInicio" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
                     <!--2. Fecha Fin de Inversion-->
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="inputGroup-sizing-default">Fecha Fin (MM/DD/YY)</span>
-                        <input type="text" id="formFechaFin" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
+                        <input type="date" id="formFechaFin" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-default">
                     </div>
 
                     <!--3. Monto periodico en dolares-->
